[REF] scss changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div class='header'>
    <div class='header__nav'>
-        <span class='header__nav__title'> Quilombo Driven Development - </span>
+        <span class='header__nav__title'>Quilombo Driven Development</span>
         <a class='header__nav__item' href={{ page.base-url }}>{{ site.translate['home'][page.lang] }}</a>
         <a class='header__nav__item' href={{ page.base-url | append: page.pages-url | append:
             '/about.html' }}>{{ site.translate['about'][page.lang] }}</a>
