--- a/_sass/qdd/_colors.scss
+++ b/_sass/qdd/_colors.scss
@@ -1,8 +1,13 @@
 $purple300:rgba(36, 24, 47, 0.99);
 $amber200:#fabd2f;
+$amber300:#f7e13e;
+$grey100:#e8e8e8;
 
 $bg-grey:#f9f9f9;
 $background-color:$purple300; 
 $color-bold:$amber200;
+$javascript-color: $amber300;
+$faded-color:rgba($javascript-color, 0.7)
+
 
 
