[ADD] comment input js integration

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,5 @@
 <meta name="viewport" content="width=device-width, user-scalable=no">
-<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ " /css/main.css " | prepend: site.baseurl }}">
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
