--- a/css/main.scss
+++ b/css/main.scss
@@ -12,6 +12,7 @@
 @import "../_sass/qdd/_md.scss";
 @import "../_sass/qdd/_header.scss";
 @import "../_sass/qdd/_footer.scss";
+@import "../_sass/qdd/_comment.scss";
 
 
 
