[ADD] Comments string

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,10 +7,10 @@
         <a class='header__nav__item' href={{ page.base-url | append: page.pages-url | append:
             '/glosarry.html' }}>{{ site.translate['glosarry'][page.lang] }}</a>
     </div>
-    <!--<div class='header__lang'>-->
-        <!--<a class='header__lang_item' href="/">es</a>-->
-        <!--<a class='header__lang_item' href="/en">en</a>-->
-    <!--</div>-->
+    <div class='header__lang'>
+        <a class='header__lang_item' href="/">es</a>
+        <a class='header__lang_item' href="/en">en</a>
+    </div>
     <!--<div class='header__top'>-->
         <!--<div class='header__top__title'>-->
             <!--<p> Quilombo Driven Development </p>-->
