--- a/_sass/qdd/_colors.scss
+++ b/_sass/qdd/_colors.scss
@@ -1,5 +1,6 @@
 $purple300:rgba(36, 24, 47, 0.99);
-$amber200:#fabd2f;
+
+$amber200:rgba(230, 215, 101, 0.22);
 $amber300:#f7e13e;
 $grey100:#e8e8e8;
 
