[ADD] including style for input comment

--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,7 @@
 @import "../_sass/qdd/_header.scss";
 @import "../_sass/qdd/_footer.scss";
 @import "../_sass/qdd/_comment.scss";
+@import "../_sass/qdd/_commentInput.scss";
 
 
 
