--- a/_sass/qdd/_comment.scss
+++ b/_sass/qdd/_comment.scss
@@ -1,4 +1,4 @@
-$comment-content-bg: rgba(230, 215, 101, 0.22);
+$comment-content-bg: $amber200;
 .comment{
     margin: 20px auto;
     width: 80%;
