[ADD] comment input title

--- a/_includes/commentsView.html
+++ b/_includes/commentsView.html
@@ -16,6 +16,7 @@
         {% endfor %}
     {% endif %}
 
+   <h3 class="comments__title__input"> {{ site.translate['commentInput'][page.lang] }} </h3>
     {% include commentInput.html %}
 </section>
 
