--- a/_sass/qdd/_base.scss
+++ b/_sass/qdd/_base.scss
@@ -4,12 +4,23 @@ body{
   margin:0;
 }
 
-
 a{
  text-decoration:none;
  padding:5px;
  color:black;
 }
+
+$button-bg: $background-color;
+button{
+    font-size: 1rem;
+    padding: 10px;
+    background-color:$button-bg; 
+    border: 0px;
+    color: white;
+    margin:5px;
+    cursor:pointer;
+}
+
 .container{
     max-width:calc(1200px - (30px * 2));
     margin-right: auto;
