[ADD] comment input font-size

--- a/_sass/qdd/_commentInput.scss
+++ b/_sass/qdd/_commentInput.scss
@@ -5,6 +5,7 @@ $base-input-bg: $amber200;
     outline: none;
     background-color: $base-input-bg;
     font-family:inherit;
+    font-size: 1rem;
 }
 
 .comment-input {
