[ADD] modal component

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <body>
 
         <div class="page-content">
+           {% include modal.html %}
            {% include header.html %}
            {{ content }}
            {% include footer.html %}
