--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,7 @@
 @import "../_sass/qdd/_footer.scss";
 @import "../_sass/qdd/_comment.scss";
 @import "../_sass/qdd/_commentInput.scss";
+@import "../_sass/qdd/_modal.scss";
 
 
 
