[ADD] integration of modal with comment callbacks

--- a/_includes/commentInput.html
+++ b/_includes/commentInput.html
@@ -37,10 +37,10 @@
             json: true,
             data: data,
             success: function(data) {
-                console.log(data);
+                openModal("Gracias! Su mensaje sera aprobado en unos minutos");
             }, 
             error: function(data){
-                console.log(data);
+                openModal("Error al recibir el mensaje");
             }
         });
     });
