[ADD] loader component

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,10 @@
 
     <body>
 
-        <div class="page-content">
+
+           {% include loader.html %}
            {% include modal.html %}
+        <div class="page-content">
            {% include header.html %}
            {{ content }}
            {% include footer.html %}
