--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,7 @@
 @import "../_sass/qdd/_comment.scss";
 @import "../_sass/qdd/_commentInput.scss";
 @import "../_sass/qdd/_modal.scss";
+@import "../_sass/qdd/_loader.scss";
 
 
 
