[REF] Moving js to one file

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,3 +3,5 @@
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="/js/commons.js"></script>
+
