[ADD] support for touch devices

--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -1,7 +1,11 @@
 <div id="modal" class="modal modal-hidden">
     <div class="modal__content">
-        <div class="modal__body">
-            <p id="modal-body-text"></p>
+        <div class="modal__content__header">
+            <div  class="modal__content__header__close" 
+                id="modal-content-header-close">&times;</div>
+        </div>
+        <div class="modal__content__body">
+            <p id="modal-content-body-text"></p>
         </div>
     </div>
 </div>
