[ADD] header jquery

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,6 @@
 <link rel="stylesheet" href="{{ " /css/main.css " | prepend: site.baseurl }}">
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
-<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="/js/commons.js"></script>
 
