--- a/_sass/qdd/_post.scss
+++ b/_sass/qdd/_post.scss
@@ -1,4 +1,5 @@
 // POST LAYOUT 
+$post-header-title-bg: $amber700;
 .post{}
 
 .post__header{
@@ -19,7 +20,7 @@
     right: 0;
     left: 0;
     text-align: center;
-    background-color: $faded-color;
+    background-color: $post-header-title-bg;
     margin: 10px;
     padding: 10px;
     color: black;
