--- a/_sass/qdd/_syntax.scss
+++ b/_sass/qdd/_syntax.scss
@@ -1,142 +1,15 @@
 /**
  * Syntax highlighting styles
  */
-//@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
- 
+
+$highlight-bg: $amber100;
+
+@import "codeThemes/_base16.scss";
+
 .highlight {
-  background: rgba(231, 231, 231, 0.67);
-  padding: 10px;
-
-  code {
-    font-family: 'Source Code Pro', monospace;
-  }
-     
- }
-
-
-//.highlight pre { background-color: #272822; }
-//.highlight .hll { background-color: #272822; }
-//.highlight .c { color: #75715e } [> Comment <]
-//.highlight .err { color: #960050; background-color: #1e0010 } [> Error <]
-//.highlight .k { color: #66d9ef } [> Keyword <]
-//.highlight .l { color: #ae81ff } [> Literal <]
-//.highlight .n { color: #f8f8f2 } [> Name <]
-//.highlight .o { color: #f92672 } [> Operator <]
-//.highlight .p { color: #f8f8f2 } [> Punctuation <]
-//.highlight .cm { color: #75715e } [> Comment.Multiline <]
-//.highlight .cp { color: #75715e } [> Comment.Preproc <]
-//.highlight .c1 { color: #75715e } [> Comment.Single <]
-//.highlight .cs { color: #75715e } [> Comment.Special <]
-//.highlight .ge { font-style: italic } [> Generic.Emph <]
-//.highlight .gs { font-weight: bold } [> Generic.Strong <]
-//.highlight .kc { color: #66d9ef } [> Keyword.Constant <]
-//.highlight .kd { color: #66d9ef } [> Keyword.Declaration <]
-//.highlight .kn { color: #f92672 } [> Keyword.Namespace <]
-//.highlight .kp { color: #66d9ef } [> Keyword.Pseudo <]
-//.highlight .kr { color: #66d9ef } [> Keyword.Reserved <]
-//.highlight .kt { color: #66d9ef } [> Keyword.Type <]
-//.highlight .ld { color: #e6db74 } [> Literal.Date <]
-//.highlight .m { color: #ae81ff } [> Literal.Number <]
-//.highlight .s { color: #e6db74 } [> Literal.String <]
-//.highlight .na { color: #a6e22e } [> Name.Attribute <]
-//.highlight .nb { color: #f8f8f2 } [> Name.Builtin <]
-//.highlight .nc { color: #a6e22e } [> Name.Class <]
-//.highlight .no { color: #66d9ef } [> Name.Constant <]
-//.highlight .nd { color: #a6e22e } [> Name.Decorator <]
-//.highlight .ni { color: #f8f8f2 } [> Name.Entity <]
-//.highlight .ne { color: #a6e22e } [> Name.Exception <]
-//.highlight .nf { color: #a6e22e } [> Name.Function <]
-//.highlight .nl { color: #f8f8f2 } [> Name.Label <]
-//.highlight .nn { color: #f8f8f2 } [> Name.Namespace <]
-//.highlight .nx { color: #a6e22e } [> Name.Other <]
-//.highlight .py { color: #f8f8f2 } [> Name.Property <]
-//.highlight .nt { color: #f92672 } [> Name.Tag <]
-//.highlight .nv { color: #f8f8f2 } [> Name.Variable <]
-//.highlight .ow { color: #f92672 } [> Operator.Word <]
-//.highlight .w { color: #f8f8f2 } [> Text.Whitespace <]
-//.highlight .mf { color: #ae81ff } [> Literal.Number.Float <]
-//.highlight .mh { color: #ae81ff } [> Literal.Number.Hex <]
-//.highlight .mi { color: #ae81ff } [> Literal.Number.Integer <]
-//.highlight .mo { color: #ae81ff } [> Literal.Number.Oct <]
-//.highlight .sb { color: #e6db74 } [> Literal.String.Backtick <]
-//.highlight .sc { color: #e6db74 } [> Literal.String.Char <]
-//.highlight .sd { color: #e6db74 } [> Literal.String.Doc <]
-//.highlight .s2 { color: #e6db74 } [> Literal.String.Double <]
-//.highlight .se { color: #ae81ff } [> Literal.String.Escape <]
-//.highlight .sh { color: #e6db74 } [> Literal.String.Heredoc <]
-//.highlight .si { color: #e6db74 } [> Literal.String.Interpol <]
-//.highlight .sx { color: #e6db74 } [> Literal.String.Other <]
-//.highlight .sr { color: #e6db74 } [> Literal.String.Regex <]
-//.highlight .s1 { color: #e6db74 } [> Literal.String.Single <]
-//.highlight .ss { color: #e6db74 } [> Literal.String.Symbol <]
-//.highlight .bp { color: #f8f8f2 } [> Name.Builtin.Pseudo <]
-//.highlight .vc { color: #f8f8f2 } [> Name.Variable.Class <]
-//.highlight .vg { color: #f8f8f2 } [> Name.Variable.Global <]
-//.highlight .vi { color: #f8f8f2 } [> Name.Variable.Instance <]
-//.highlight .il { color: #ae81ff } [> Literal.Number.Integer.Long <]
-
-//.highlight .gh { } [> Generic Heading & Diff Header <]
-//.highlight .gu { color: #75715e; } [> Generic.Subheading & Diff Unified/Comment? <]
-//.highlight .gd { color: #f92672; } [> Generic.Deleted & Diff Deleted <]
-//.highlight .gi { color: #a6e22e; } [> Generic.Inserted & Diff Inserted <]
-
-
-.hll { background-color: #ffffff }
-.c { color: #888888; font-style: italic } /* Comment */
-.err { color: #a61717; background-color: #e3d2d2 } /* Error */
-.k { color: #000000; font-weight: bold } /* Keyword */
-.cm { color: #888888 } /* Comment.Multiline */
-.cp { color: #cc0000; font-weight: bold } /* Comment.Preproc */
-.c1 { color: #888888 } /* Comment.Single */
-.cs { color: #cc0000; font-weight: bold; background-color: #fff0f0 } /* Comment.Special */
-.gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
-.ge { font-style: italic } /* Generic.Emph */
-.gr { color: #aa0000 } /* Generic.Error */
-.gh { color: #303030 } /* Generic.Heading */
-.gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
-.go { color: #888888 } /* Generic.Output */
-.gp { color: #555555 } /* Generic.Prompt */
-.gs { font-weight: bold } /* Generic.Strong */
-.gu { color: #606060 } /* Generic.Subheading */
-.gt { color: #aa0000 } /* Generic.Traceback */
-.highlight .kc{font-weight:bold;} /* Keyword.Constant */
-.highlight .kd{font-weight:bold;} /* Keyword.Declaration */
-.highlight .kn{font-weight:bold;} /* Keyword.Namespace */
-.highlight .kp{font-weight:bold;} /* Keyword.Pseudo */
-.highlight .kr{font-weight:bold;} /* Keyword.Reserved */
-.highlight .kt{color:#458;font-weight:bold;} /* Keyword.Type */
-.m { color: #0000DD; font-weight: bold } /* Literal.Number */
-.s { color: #dd2200; background-color: #fff0f0 } /* Literal.String */
-.highlight .na{color:#008080;} /* Name.Attribute */
-.highlight .nb{color:#0086B3;} /* Name.Builtin */
-.highlight .nc{color:#458;font-weight:bold;} /* Name.Class */
-.highlight .no{color:#008080;} /* Name.Constant */
-.highlight .ni{color:#800080;} 
-.highlight .ne{color:#900;font-weight:bold;} /* Name.Exception */
-.highlight .nf{color:#900;font-weight:bold;} /* Name.Function */
-.highlight .nn{color:#005;font-weight:bold;} /* Name.Namespace */
-.highlight .nt{color:#000080;} /* Name.Tag */
-.highlight .nv{color:#008080;} /* Name.Variable */
-.py { color: #336699; font-weight: bold } /* Name.Property */
-.ow { color: #008800 } /* Operator.Word */
-.w { color: #bbbbbb } /* Text.Whitespace */
-.mf { color: #0000DD; font-weight: bold } /* Literal.Number.Float */
-.mh { color: #0000DD; font-weight: bold } /* Literal.Number.Hex */
-.highlight .mi {color:#099;} /* Literal.Number.Integer */
-.mo { color: #0000DD; font-weight: bold } /* Literal.Number.Oct */
-.sb { color: #dd2200; background-color: #fff0f0 } /* Literal.String.Backtick */
-.highlight .sc{color:#d14;} /* Literal.String.Char */
-.sd { color: #dd2200; background-color: #fff0f0 } /* Literal.String.Doc */
-.highlight .s2{color:#d14;} /* Literal.String.Double */
-.highlight .se{color:#d14;} /* Literal.String.Escape */
-.highlight .sh{color:#d14;} /* Literal.String.Heredoc */
-.highlight .si{color:#d14;} /* Literal.String.Interpol */
-.highlight .sx{color:#d14;} /* Literal.String.Other */
-.highlight .sr{color:#d14;} /* Literal.String.Regex */
-.highlight .s1{color:#d14;} /* Literal.String.Single */
-.highlight .ss{color:#d14;} /* Literal.String.Symbol */
-.bp { color: #003388 } /* Name.Builtin.Pseudo */
-.vc { color: #336699 } /* Name.Variable.Class */
-.vg { color: #dd7700 } /* Name.Variable.Global */
-.vi { color: #3333bb } /* Name.Variable.Instance */
-.il { color: #0000DD; font-weight: bold } /* Literal.Number.Integer.Long */
+    background-color: $highlight-bg;
+    padding: 10px;
+    code {
+        font-family: 'Source Code Pro', monospace;
+    }
+}
