[ADD] _base64 theme closer to github code theme

--- a/_sass/qdd/_syntax.scss
+++ b/_sass/qdd/_syntax.scss
@@ -3,13 +3,21 @@
  */
 
 $highlight-bg: $amber100;
-
 @import "codeThemes/_base16.scss";
+.code {
+    font-family: 'Droid Sans Mono', monospace !important;
+    font-size: 0.9em;
+    color: #a71d5d;
+}
 
 .highlight {
     background-color: $highlight-bg;
     padding: 10px;
     code {
-        font-family: 'Source Code Pro', monospace;
+        @extend .code;
     }
+}
+
+code {
+    @extend .code;
 }
