--- a/_sass/qdd/codeThemes/_base16.scss
+++ b/_sass/qdd/codeThemes/_base16.scss
@@ -1,77 +1,134 @@
-.highlight table td { padding: 5px; }
-.highlight table pre { margin: 0; }
-.highlight, .highlight .w {
-  color: #303030;
+.highlight table td {
+    padding: 5px;
 }
+
+.highlight table pre {
+    margin: 0;
+}
+
+.highlight,
+.highlight .w {
+    color: #303030;
+}
+
 .highlight .err {
-  color: #151515;
-  background-color: #ac4142;
+    color: #a71d5d;
 }
-.highlight .c, .highlight .cd, .highlight .cm, .highlight .c1, .highlight .cs {
-  color: #505050;
+
+.highlight .c,
+.highlight .cd,
+.highlight .cm,
+.highlight .c1,
+.highlight .cs {
+    color: #969896;
 }
+
 .highlight .cp {
-  color: #f4bf75;
+    color: #f4bf75;
 }
+
 .highlight .nt {
-  color: #f4bf75;
+    color: #f4bf75;
 }
-.highlight .o, .highlight .ow {
-  color: #d0d0d0;
+
+.highlight .o,
+.highlight .ow {
+    color: #a71d5d;
 }
-.highlight .p, .highlight .pi {
-  color: #d0d0d0;
+
+.highlight .p,
+.highlight .pi {
+    color: black;
 }
+
 .highlight .gi {
-  color: #90a959;
+    color: #90a959;
 }
+
 .highlight .gd {
-  color: #ac4142;
+    color: #ac4142;
 }
+
 .highlight .gh {
-  color: #6a9fb5;
-  background-color: #151515;
-  font-weight: bold;
+    color: #6a9fb5;
+    background-color: #151515;
+    font-weight: bold;
 }
-.highlight .k, .highlight .kn, .highlight .kp, .highlight .kr, .highlight .kv {
-  color: #aa759f;
+
+.highlight .k,
+.highlight .kn,
+.highlight .kp,
+.highlight .kr,
+.highlight .kv {
+    color: #a71d5d;
 }
+
 .highlight .kc {
-  color: #d28445;
+    color: #0086b3;
 }
+
 .highlight .kt {
-  color: #d28445;
+    color: #a71d5d;
 }
+
 .highlight .kd {
-  color: #d28445;
+    color: #a71d5d;
 }
-.highlight .s, .highlight .sb, .highlight .sc, .highlight .sd, .highlight .s2, .highlight .sh, .highlight .sx, .highlight .s1 {
-  color: #90a959;
+
+.highlight .s,
+.highlight .sb,
+.highlight .sc,
+.highlight .sd,
+.highlight .s2,
+.highlight .sh,
+.highlight .sx,
+.highlight .s1 {
+    color: #183691;
 }
+
 .highlight .sr {
-  color: #75b5aa;
+    color: #75b5aa;
 }
+
 .highlight .si {
-  color: #8f5536;
+    color: #8f5536;
 }
+
 .highlight .se {
-  color: #8f5536;
+    color: #8f5536;
 }
+
 .highlight .nn {
-  color: #f4bf75;
+    color: #f4bf75;
 }
+
 .highlight .nc {
-  color: #f4bf75;
+    color: #f4bf75;
 }
+
 .highlight .no {
-  color: #f4bf75;
+    color: #f4bf75;
 }
+
 .highlight .na {
-  color: #6a9fb5;
+    color: #6a9fb5;
 }
-.highlight .m, .highlight .mf, .highlight .mh, .highlight .mi, .highlight .il, .highlight .mo, .highlight .mb, .highlight .mx {
-  color: #90a959;
+
+.highlight .m,
+.highlight .mf,
+.highlight .mh,
+.highlight .mi,
+.highlight .il,
+.highlight .mo,
+.highlight .mb,
+.highlight .mx {
+    color: #0086b3;
 }
+
 .highlight .ss {
-  color: #90a959;
+    color: #90a959;
+}
+
+.highlight .nx {
+    color: #795da3;
 }
