--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
 <link rel="stylesheet" href="{{ " /css/main.css " | prepend: site.baseurl }}">
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="/js/commons.js"></script>
 
