--- a/_sass/qdd/_base.scss
+++ b/_sass/qdd/_base.scss
@@ -5,9 +5,8 @@ body {
 }
 
 a {
-    text-decoration: none;
-    padding: 5px;
     color: black;
+    text-decoration: underline;
 }
 
 $button-bg: $background-color;
