--- a/_sass/qdd/_header.scss
+++ b/_sass/qdd/_header.scss
@@ -1,30 +1,103 @@
-.header{
-    padding:10px;
+$header-nav-mobile-item-bg:black;
+$header-nav-mobile-item-color:white;
+$header-nav-mobile-menu-open-gb: $purple800;
+$header-nav-mobile-top-text-bg:black;
+$header-nav-mobile-top-text-color:white;
+
+.header {
+    padding: 10px;
     border-bottom: 1px solid $grey100;
 }
 
-.header__top{}
-.header__nav__title{
-    background:black;
-    color:white;
+.header__nav {}
+
+.header__nav__desktop {}
+
+.header__nav__desktop__title {
+    background: black;
+    color: white;
     padding: 5px;
     font-size: 12pt;
-    text-align:center; 
+    text-align: center;
 }
 
-.header__nav{}
-.header__nav__item{
-    .header__nav__item{
-        padding:10px;
-    }
+.header__nav__desktop__item {
+    padding: 10px;
+    margin: 5px;
+    text-decoration: none;
 }
 
-.header__lang{
-    text-align:right; 
+.header__nav__mobile {}
+
+.header__nav__mobile__top {
+    display: none;
+    text-align:center;
 }
-.header__lang__item{
+
+.header__nav__mobile__top__text {
+    flex: 3;
     padding:10px;
+    margin:10px;
+    background-color:$header-nav-mobile-top-text-bg;
+    color:$header-nav-mobile-top-text-color;
+
 }
 
-@media screen and (max-width: $mobile-width){
+.header__nav__mobile__top__hamburguer {
+    height: 30px;
+    margin:10px;
+    padding:5px;
+}
+
+.header__nav__mobile__menu {
+    display:none;
+    height: 0px;
+    width: 0px;
+}
+
+.header__nav__mobile__menu--open {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    position: fixed;
+    background-color: $header-nav-mobile-menu-open-gb;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    -webkit-transition: width 0.5s;
+}
+
+.header__nav__mobile__item {
+    color: $header-nav-mobile-item-color;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    font-size: 2em;
+    text-decoration: none;
+    margin: 10px;
+    background: $header-nav-mobile-item-bg;
+    cursor:pointer;
+}
+
+.header__lang {
+    text-align: right;
+}
+
+.header__lang__item {
+    padding: 10px;
+}
+
+@media screen and (max-width: $mobile-width) {
+    .header {
+        padding: 0px;
+    }
+    .header__nav__desktop {
+        display: none;
+    }
+    .header__nav__mobile__top {
+        display: flex;
+    }
 }
