--- a/_sass/qdd/_header.scss
+++ b/_sass/qdd/_header.scss
@@ -50,7 +50,8 @@ $header-nav-mobile-top-text-color:white;
 }
 
 .header__nav__mobile__menu {
-    display:none;
+    //display:none;
+    opacity:0;
     height: 0px;
     width: 0px;
 }
@@ -66,8 +67,9 @@ $header-nav-mobile-top-text-color:white;
     background-color: $header-nav-mobile-menu-open-gb;
     z-index: 1;
     display: flex;
+    opacity:1;
     flex-direction: column;
-    -webkit-transition: width 0.5s;
+    -webkit-transition: opacity  0.2s;
 }
 
 .header__nav__mobile__item {
