[ADD] header subtile in mobile resolution

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
         </div>
         <div id="header-nav-mobile" class="header__nav__mobile">
             <div id="header-nav-mobile-top" class="header__nav__mobile__top">
-                    <div class="header__nav__mobile__top__text">Quilombo Driven Development</div>
+                    <div id="header-nav-mobile-top-text" class="header__nav__mobile__top__text">Quilombo Driven Development</div>
                     <img id="header-nav-mobile-top-hamburger" src="/assets/hamburger.png" class="header__nav__mobile__top__hamburguer"></img>
             </div>
             <div id="header-nav-mobile-menu" class="header__nav__mobile__menu">
