--- a/_sass/qdd/_base.scss
+++ b/_sass/qdd/_base.scss
@@ -48,4 +48,7 @@ button {
     .page-content {
         margin: 0px;
     }
+    .container {
+        margin-top: 50px; //because of header
+    }
 }
