[MOD] postcard link text decoration none

--- a/_sass/qdd/_post.scss
+++ b/_sass/qdd/_post.scss
@@ -56,6 +56,10 @@ $post-header-title-bg: $amber700;
     padding: 20px;
     box-shadow: 10px 10px 20px rgba(136, 136, 136, 0.14);
 }
+.postcard__link{
+    text-decoration: none;
+}
+
 .postcard__header{
     text-align: center;
     position:relative;
