[ADD] google analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
            {% include header.html %}
            {{ content }}
            {% include footer.html %}
+           {% include analytics.html %}
         </div>
 
     </body>
