[ADD] reducing header width

--- a/_sass/qdd/_post.scss
+++ b/_sass/qdd/_post.scss
@@ -6,6 +6,9 @@ $post-header-title-bg: $amber700;
     height: 250px;
     position: relative;
     overflow:hidden;
+    text-align:center;
+    width:80%;
+    margin:auto;
 }
 .post__header__background{
     width: 100%;
