[MOD] font family for article

--- a/_sass/qdd/_md.scss
+++ b/_sass/qdd/_md.scss
@@ -172,3 +172,10 @@ footer {
         color: white;
     }
 }
+
+article {
+    font-family: 'Droid Serif', serif;
+    p {
+        line-height: 1.7;
+    }
+}
