--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <meta name="viewport" content="width=device-width, user-scalable=no">
 <link rel="stylesheet" href="{{ " /css/main.css " | prepend: site.baseurl }}">
+<link href="https://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono" rel="stylesheet">
