--- a/_sass/qdd/_post.scss
+++ b/_sass/qdd/_post.scss
@@ -7,13 +7,14 @@ $post-header-title-bg: $amber700;
     position: relative;
     overflow:hidden;
     text-align:center;
-    width:80%;
+    width:70%;
     margin:auto;
 }
 .post__header__background{
     width: 100%;
     height: 100%;
-    background-position: center;
+    background-position-x: 0;
+    background-position-y: 0;
     filter: grayscale(100%);
     background-size: cover;
 }
